--- a/Html code file/index.html
+++ b/Html code file/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>PW ASSIGNMENT</title>
 </head>
 <body>
-    <h1 style="background-color: chartreuse; color: black; text-align: center;">PW Skills</h1>
-    <h1 style="text-align: center;">Welcome to My Vlog</h1>
-    <ul>
-       <h3><a href="webdev.html">Web Devlopment</a></h3>
-        <h3><a href="webdesign.html">Web Design</a></h3>
-    </ul>
-       <div style="display: inline;">
-        <img src="https://st3.depositphotos.com/1049680/37484/i/450/depositphotos_374848662-stock-photo-young-handsome-man-beard-wearing.jpg" alt="">
-        <p>He may be a strong, masculine, independent man. He may say he doesn’t like to be fussed over. He may even scoff at mushy sentiments. But if he’s like most men, your guy needs to hear how much you care about him from time to time. So which are some of the hottest handsome boy statuses to share on Instagram and WhatsApp? Read more: https://www.tuko.co.ke/421557-100-hottest-handsome-boy-status-share-instagram-whatsapp.html</p>
-    </div>
+    <h1 style="text-align: center;">PW SKILLS</h1>
+   <p><b>This text will be bolded</b></p>
+   <p><i>This text will be italic</i></p>
+   <p><u>This text wil be underlilned</u></p>
+   <p>
+    <mark>This text will be highlighted</mark>
+       </p>
+    <p>This is normal text <sup>This will be super scripted</sup> This is normal again</p>
+    <p>This is normal text <sub>This text will be super scripted</sub> </p>
+    <p>Normal text <small>Small text</small></p>
+    <p><del>This text will be deleted</del></p>
 
 </body>
 </html>
